--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Hello coursera</title>
-</head>
-<body>
-	<h1>Hello coursera students!</h1>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<script src="app.js"></script>
+		<link rel="stylesheet" type="text/css" href="index_style.css">
+		<title>AngularJS Web Applications</title>
+	</head>
+	<body>
+		<h1>Name calculator!</h1>
+		<div id="nameCalculator">
+			<div>
+				Your name: <input type="text" id="name">
+			</div>
+		</div>
+		<div id="output"></div>
+	</body>
 </html>
