--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<script src="app.js"></script>
+		<script src="angular.min.js"></script>
+		<script src="app.js"></script>		
 		<link rel="stylesheet" type="text/css" href="index_style.css">
 		<title>AngularJS Web Applications</title>
 	</head>
-	<body>
-		<h1>Name calculator!</h1>
-		<div id="nameCalculator">
+	<body ng-app = "NameCalculator">
+		<h1>Name Calculator</h1>
+		<div ng-controller="NameCalculatorController">
 			<div>
-				Your name: <input type="text" id="name">
+				Your name:
+				<input type="text" ng-model="name" ng-keyup="displayValue();">
+			</div>
+			<div>				
+				Total numeric value of person's name is: {{total}}			
 			</div>
 		</div>
-		<div id="output"></div>
 	</body>
 </html>
